--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-  "name": "front",
+  "name": "my-instagram-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build --dest ../my-instegram-backend/public",
+    "build": "vue-cli-service build --dest ../my-Instagram-backend-Private/public",
     "start": "vue-cli-service serve"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "core-js": "^2.6.5",
-    "register-service-worker": "^1.7.1",
-    "socket.io-client": "^2.2.0",
-    "vue": "^2.6.10",
-    "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "axios": "^1.2.1",
+    "core-js": "^3.26.1",
+    "register-service-worker": "^1.7.2",
+    "socket.io-client": "^2.5.0",
+    "vue": "^2.6.14",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.9.0",
-    "@vue/cli-plugin-pwa": "^4.5.11",
-    "@vue/cli-service": "^3.9.0",
-    "node-sass": "^5.0.0",
-    "sass-loader": "^10.1.1",
-    "vue-template-compiler": "^2.6.10"
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-pwa": "^5.0.8",
+    "@vue/cli-plugin-router": "~5.0.0",
+    "@vue/cli-plugin-vuex": "~5.0.0",
+    "@vue/cli-service": "~5.0.0",
+    "node-sass": "^7.0.3",
+    "sass": "^1.32.7",
+    "sass-loader": "^12.0.0",
+    "vue-template-compiler": "^2.6.14"
   }
 }
